@@ -887,7 +887,7 @@ linkend="method-gtkwidget--set-activate-signal">set_scroll_adjustments_signal</l
     <methodname><link linkend="function-gtk--widget-get-default-direction">gtk.widget_get_default_direction</link></methodname>
     <methodparam></methodparam>
   </methodsynopsis><methodsynopsis language="python">
-    <methodname><link linkend="function-gtk--widget-list-style-properties">gtk.widget_list_style_properties</link></methodname>
+    <methodname><link linkend="function-gtk--widget-class-list-style-properties">gtk.widget_class_list_style_properties</link></methodname>
     <methodparam><parameter role="keyword">cmap</parameter></methodparam>
   </methodsynopsis><methodsynopsis language="python">
     <methodname><link linkend="function-gtk--widget-class-install-style-property">gtk.widget_class_install_style_property</link></methodname>
@@ -1929,7 +1929,7 @@ the theme, giving theme authors more control over the look of applications
 without the need to write a theme engine in C.</para>
 
     <para>Use the <link
-linkend="function-gtk--widget-list-style-properties"><function>gtk.widget.list_style_properties</function>()</link>
+linkend="function-gtk--widget-class-list-style-properties"><function>gtk.widget_class_list_style_properties</function>()</link>
 function to get information about existing style properties and the <link
 linkend="method-gtkwidget--style-get-property"><methodname>style_get_property</methodname>()</link>
 method to obtain the value of a style property.</para>
@@ -6244,11 +6244,11 @@ function.</para>
 
     </refsect2>
 
-    <refsect2 id="function-gtk--widget-list-style-properties">
-      <title>gtk.widget_list_style_properties</title>
+    <refsect2 id="function-gtk--widget-class-list-style-properties">
+      <title>gtk.widget_class_list_style_properties</title>
 
       <programlisting><methodsynopsis language="python">
-	  <methodname>gtk.widget_list_style_properties</methodname>
+	  <methodname>gtk.widget_class_list_style_properties</methodname>
 	  <methodparam><parameter
 			 role="keyword">widget</parameter></methodparam>
 	</methodsynopsis></programlisting>
@@ -6267,7 +6267,7 @@ function.</para>
 	<para>This function is available in PyGTK 2.4 and above.</para>
       </note>
 
-     <para>The <function>gtk.widget_list_style_properties</function>()
+     <para>The <function>gtk.widget_class_list_style_properties</function>()
 function returns a list of the style properties of the <link
 linkend="class-gtkwidget"><classname>gtk.Widget</classname></link> specified
 by <parameter>widget</parameter>. The list contains a GParam object for each
