@@ -1,3 +1,8 @@
+2005-07-27  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkwidget.xml (widget_class_list_style_properties): Fix
+	incorrectly named function.
+
 2005-07-22  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktextbuffer.xml:  Explicitly identify params that are
